mdadm (2.6.9-2) unstable; urgency=low

  * Fix the check of whether mdadm.conf defines all devices known to the
    system; thanks Cristian Ionescu-Idbohrn (closes: #525655).
  * No longer pass -k to modprobe, which has been deprecated for a long time;
    thanks to Jan Hudec (closes: #519999).
  * Remove Mario Joußen from the uploaders list, since his email started
    bouncing.

 -- martin f. krafft <madduck@debian.org>  Sun, 26 Apr 2009 16:08:28 +0200

mdadm (2.6.9-1) unstable; urgency=low

  * New upstream release.
  * Do not set -eu in the bugscript to maximise information output in the case
    of errors.
  * Make initramfs script depend on multipath to ensure its script is run
    before ours (closes: #516605).
  * Provide an alternative (postfix) for mail-transport-agent (closes:
    #522300). I chose postfix because that's the only one I could recommend,
    and since the alternative does not affect people who already have an MTA
    installed, or have a preference, it won't affect them.
  * Honour debconf pre-selection of mdadm/initrdstart (closes: #516802).
  * Incorporate patch from Adrian Bridgett: the initramfs hook now checks to
    see if all known arrays are listed in mdadm.conf and issues a warning if
    this is not the case (closes: #519328).
  * Make checkarray skip over arrays still marked auto-read-only
    (closes: #510641).
  * Add cron.daily snippet from Paul Slootman to run one-shot scans every day
    to ensure that failed arrays don't go unnoticed (closes: #497949).
  * Bumped Standards-Version to 3.8.1; no changes necessary.

 -- martin f. krafft <madduck@debian.org>  Sat, 25 Apr 2009 19:04:47 +0200

mdadm (2.6.8-12-gb47dff6-2) unstable; urgency=low

  * Brown paper bag release: I built from the wrong branch which caused some
    Debian-specific changes not to get into the package. Thus build fixes it.

 -- martin f. krafft <madduck@debian.org>  Mon, 16 Feb 2009 12:15:37 +0100

mdadm (2.6.8-12-gb47dff6-1) unstable; urgency=low
