@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Debian mdadm maintainers <pkg-mdadm-devel@lists.alioth.debian.org>
 Uploaders: martin f. krafft <madduck@debian.org>
-Build-Depends: debhelper (>= 6), po-debconf, groff-base, docbook-to-man
+Build-Depends: debhelper (>= 6), po-debconf, groff-base, docbook-to-man, quilt
 Standards-Version: 3.8.1
 Vcs-Git: git://git.debian.org/git/pkg-mdadm/mdadm
 Vcs-Browser: http://git.debian.org/?p=pkg-mdadm/mdadm.git
