@@ -6,6 +6,11 @@
 
 #export DH_VERBOSE=1
 
+#TG_BRANCHES="..."
+
+include /usr/share/quilt/quilt.make
+#-include /usr/share/topgit/tg2quilt.mk
+
 CXFLAGS = -ggdb
 CXFLAGS_UDEB := $(CXFLAGS) -fomit-frame-pointer
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
@@ -23,7 +28,7 @@ debian/mdadm-startall.8: debian/mdadm-startall.sgml
 	docbook-to-man $< > $@
 
 build: configure build-stamp
-build-stamp: debian/mdadm-startall.8
+build-stamp: patch debian/mdadm-startall.8
 	dh_testdir
 	$(MAKE) -f debian/rules mdadm.udeb DEBIAN=yes
 	$(MAKE) clean
@@ -43,7 +48,7 @@ mdadm: configure
 	$(MAKE) $(FLAGS) all
 .PHONY: mdadm
 
-clean:
+clean: unpatch
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
