@@ -6,6 +6,8 @@ mdadm (2.6.9-2) unstable; urgency=low
     thanks to Jan Hudec (closes: #519999).
   * Remove Mario Joußen from the uploaders list, since his email started
     bouncing.
+  * Prepare mdadm source to use quilt, with the long-term goal to switch to
+    TopGit, once I find the time.
 
  -- martin f. krafft <madduck@debian.org>  Sun, 26 Apr 2009 16:08:28 +0200
 
